[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "3.0.0-beta.5"
termion = "*"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"

[profile.release]
# Keep debug information in release for better flamegraphs
debug = true

[[bench]]
name = "days"
harness = false